--- a/components/navigation-links.html
+++ b/components/navigation-links.html
@@ -1,10 +1,45 @@
 <div>
   <link href="./navigation-links.css" rel="stylesheet" />
   <nav class="navigation-links-nav">
-    <span class="navigation-links-text"><span>Home</span></span>
-    <span class="navigation-links-text1"><span>Features</span></span>
-    <span class="navigation-links-text2"><span>Team</span></span>
-    <span class="navigation-links-text3"><span>Blog</span></span>
-    <span class="navigation-links-text4"><span>About</span></span>
+    <a
+      href="index.html"
+      target="_blank"
+      rel="noreferrer noopener"
+      class="navigation-links-link"
+    >
+      <span>Home</span>
+    </a>
+    <a
+      href="index.html"
+      target="_blank"
+      rel="noreferrer noopener"
+      class="navigation-links-link1"
+    >
+      <span>Features</span>
+    </a>
+    <a
+      href="index.html"
+      target="_blank"
+      rel="noreferrer noopener"
+      class="navigation-links-link2"
+    >
+      <span>Team</span>
+    </a>
+    <a
+      href="index.html"
+      target="_blank"
+      rel="noreferrer noopener"
+      class="navigation-links-link3"
+    >
+      <span>Blog</span>
+    </a>
+    <a
+      href="index.html"
+      target="_blank"
+      rel="noreferrer noopener"
+      class="navigation-links-link4"
+    >
+      <span>About</span>
+    </a>
   </nav>
 </div>
